# regexbackref

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  ast.cpp  ast.h  lexer.cpp  lexer.h  main.cpp  ndtm.cpp  ndtm.h  parser.cpp  parser.h  readme.txt  regexmatcher  tape.cpp  tape.h  test.sh  testGrep.sh  testPerl.sh  testTime.sh
.github/workflows/: cmake.yml
in/: regex
src/: CMakeLists.txt  Doxyfile  Makefile  ast.cpp  ast.h  automaton.cpp  automaton.h  avdfa.cpp  avdfa.h  lexer.cpp  lexer.h  main.cpp  matcher.cpp  matcher.h  memorystate.cpp  ndtm.cpp  ndtm.h  parser.cpp  parser.h  tape.cpp  tape.h  test.sh  twoway.cpp  twoway.h
src/impl/: CMakeLists.txt  Config.h.in  ast.cpp  ast.h  automaton.cpp  automaton.h  avdfa.cpp  avdfa.h  lexer.cpp  lexer.h  main.cpp  matcher.cpp  matcher.h  memorystate.cpp  memorystate.h  ndtm.cpp  ndtm.h  parser.cpp  parser.h  tape.cpp  tape.h  test.cpp
src/impl/include/: automaton.h  avdfa.h  lexer.h  matcher.h  memorystate.h  ndtm.h  parser.h  tape.h
src/tests/: avd.in  hard.in  hard.ref  nSigma.ref  perlhard.in  perlsimpleReg.in  simple.in  simple.ref  simpleReg.in
src/thesis/: BP_Zaporozhchenko_Oleksandr_2020.tex  FITthesis.cls  mybibliographyfile.bib
tests/: avd.ref  grepnSigma.in  grepsimple.in  grepsimpleReg.in  hard.in  hard.ref  nSigma.in  nVar.in  nVar.ref  perlnSigma.in  perlnVar.in  perlsimple.in  simpleReg.ref
